first commit in branch 2

--- a/assignment.html
+++ b/assignment.html
@@ -3,9 +3,11 @@
 <head>REASONS FOR JOINING THE TECH COMMUNITY
 
 </head>
-<body>in today's world the pace at which technology is advancing is extremely quick and it would be dumb to sit back and watch the world swiftly disappear before your eyes<br>
+<body>
+<p>In today's world the pace at which technology is advancing is extremely quick and it would be dumb to sit back and watch the world swiftly disappear before your eyes<br>
     so basic knowledge of tech helps keep balance in all our jobs and duties and tech also provides easy communication and makes our lives easy and faster and notwithstanding  </br>
-    the likelihood of the computers becoming self conscious and turning on us so,i would like to make use of the time they are here and happy to help to learn a thing or two about them<br></br>
+    the likelihood of the computers becoming self conscious and turning on us so,i would like to make use of the time they are here and happy to help to learn a thing or two about them</p>
+</br>
 
 </body>
 </html>
